# fx9000-info

./: README.md
cartridge_dumps/: cart_4k_layout.txt  cart_4k_layout.txt~
firmware/video_ram_replacement/: CMakeLists.txt  add_tag.sh  flash_code.sh  test_flash_all_addr.sh  test_flash_single_addr.sh  video_ram_replacement.c
information/: .~lock.fx9000p_cartridge_memory_addressing#  Screen Layout  Video_RAM.txt  fx9000p_cartridge_memory_addressing
information/cartridge-addressing/: cartridge-addressing-cache.lib  cartridge-addressing.sch  cartridge-addressing.sch-bak
mechanical/: .~lock.screws#  screws
pcbs/video-ram-replacement/pcb/video-ram-replacement/: ajm.lib  fp-info-cache  picopak.sch  rp2040m.sch-bak  video-ram-replacement-cache.lib  video-ram-replacement.kicad_pcb  video-ram-replacement.kicad_pcb-bak  video-ram-replacement.pro  video-ram-replacement.sch
pcbs/video-ram-replacement/pcb/video-ram-replacement/fab1/: video-ram-replacement-B_Cu.gbr  video-ram-replacement-B_Mask.gbr  video-ram-replacement-B_Paste.gbr  video-ram-replacement-B_SilkS.gbr  video-ram-replacement-Edge_Cuts.gbr  video-ram-replacement-F_Cu.gbr  video-ram-replacement-F_Mask.gbr  video-ram-replacement-F_Paste.gbr  video-ram-replacement-F_SilkS.gbr  video-ram-replacement-In1_Cu.gbr  video-ram-replacement-In2_Cu.gbr  video-ram-replacement-NPTH-drl_map.ps  video-ram-replacement-NPTH.drl  video-ram-replacement-PTH-drl_map.ps  video-ram-replacement-PTH.drl
pcbs/video-ram-replacement/pcb/video-ram-replacement/fab2/: .~lock.video-ram-replacement.csv#  .~lock.vrr-cpl-top.csv#  .~lock.vrr_bom.xlsx#  video-ram-replacement-B_Cu.gbr  video-ram-replacement-B_Mask.gbr  video-ram-replacement-B_Paste.gbr  video-ram-replacement-B_SilkS.gbr  vrr-cpl-top.csv  (+19 more)
rom_disassembly/: fx9000p.html
(+17 files in other folders)
